--- a/media_driver/linux/common/os/i915/include/uapi/README
+++ b/media_driver/linux/common/os/i915/include/uapi/README
@@ -13,24 +13,19 @@ $ make headers_install INSTALL_HDR_PATH=/path/to/install
 
 The last update was done at the following kernel commit :
 
-commit 16065fcdd19ddb9e093192914ac863884f308766
-Author: Gerd Hoffmann <kraxel@redhat.com>
-Date:   Fri Feb 8 15:04:09 2019 +0100
+commit a1a1ca70deb3ec600eeabb21de7f3f48aaae5695 (HEAD -> drm-next, origin/drm-next, origin/HEAD)
+Merge: af8352f1ff54 a4394b6d0a27
+Author: Dave Airlie <airlied@redhat.com>
+Date:   Fri Apr 23 12:56:21 2021 +1000
 
-    drm/virtio: do NOT reuse resource ids
+    Merge tag 'drm-misc-next-fixes-2021-04-22' of git://anongit.freedesktop.org/drm/drm-misc into drm-next
 
-    Bisected guest kernel changes crashing qemu.  Landed at
-    "6c1cd97bda drm/virtio: fix resource id handling".  Looked again, and
-    noticed we where not only leaking *some* ids, but *all* ids.  The old
-    code never ever called virtio_gpu_resource_id_put().
+    A few fixes for the next merge window, with some build fixes for anx7625
+    and lt8912b bridges, incorrect error handling for lt8912b and TTM, and
+    one fix for TTM page limit accounting.
 
-    So, commit 6c1cd97bda effectively makes the linux kernel starting
-    re-using IDs after releasing them, and apparently virglrenderer can't
-    deal with that.  Oops.
-
-    This patch puts a temporary stopgap into place for the 5.0 release.
-
-    Signed-off-by: Gerd Hoffmann <kraxel@redhat.com>
-    Reviewed-by: Dave Airlie <airlied@redhat.com>
     Signed-off-by: Dave Airlie <airlied@redhat.com>
-    Link: https://patchwork.freedesktop.org/patch/msgid/20190208140409.15280-1-kraxel@redhat.com
+
+    From: Maxime Ripard <maxime@cerno.tech>
+    Link: https://patchwork.freedesktop.org/patch/msgid/20210422163329.dvbuwre3akwdmzjt@gilmour
+
